--- a/add.html
+++ b/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styleC.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <h1>Blog Management</h1>
         
         <!-- Form for adding a blog post -->
-        <form action="blog.php" method="post">
+        <form action="addBlog.php" method="post">
             <h2>Add Blog Post</h2>
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
