--- a/update.html
+++ b/update.html
@@ -10,9 +10,9 @@
     <div>
 
          <!-- Form for updating a blog post -->
-         <form action="blog.php" method="post">
+         <form action="updateBlog.php" method="post">
             <h2>Update Blog Post</h2>
-            <label for="updateId">Post ID:</label>
+            <label for="updateId">Blog ID:</label>
             <input type="text" id="updateId" name="updateId" required>
             
             <label for="updateContent">New Content:</label>
